Refactor : lessons
